docs: consolidate CLAUDE.md to 30 LOC — behavioral signal only
Strip to pure developer instructions: build commands, guard rules (enforced),
quality/test conventions. OTP table + Java 26 details live in
.claude/rules/java-source.md (path-triggered, loads only on Java edits).

https://claude.ai/code/session_016tpUECv6vY4mJFcfFMdQxn